@startuml classes_kafkaescli.interface

class "APISchema" as kafkaescli.interface.web.schemas.APISchema #aliceblue {
}
class "ApiRoot" as kafkaescli.interface.web.schemas.ApiRoot #aliceblue {
  config
  name : str
  version : str
}
class "ProduceParams" as kafkaescli.interface.web.schemas.ProduceParams #aliceblue {
  values : List[JSONSerializable]
}
class "ProduceResponse" as kafkaescli.interface.web.schemas.ProduceResponse #aliceblue {
  params
  results : List[ProducerPayload]
}
kafkaescli.interface.web.schemas.ApiRoot --|> kafkaescli.interface.web.schemas.APISchema
kafkaescli.interface.web.schemas.ProduceParams --|> kafkaescli.interface.web.schemas.APISchema
kafkaescli.interface.web.schemas.ProduceResponse --|> kafkaescli.interface.web.schemas.APISchema
kafkaescli.interface.web.schemas.ProduceParams --* kafkaescli.interface.web.schemas.ProduceResponse : params
@enduml
